deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app-deployment
  labels:
    app: simple-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-app
  template:
    metadata:
      labels:
        app: simple-app
    spec:
      containers:
        - name: simple-app
          image: ${REGISTRY_URL}/${IMAGE_NAME}:${IMAGE_TAG}  # These variables will be replaced dynamically
          ports:
            - containerPort: 80
