service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app-service
spec:
  selector:
    app: simple-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: nodeport  # Use LoadBalancer if you're on a cloud provider that supports it
