service-entry.yaml
apiVersion: nginx.org/v1
kind: ServiceEntry
metadata:
  name: cross-cluster-entry-gke
spec:
  hosts:
    - "simple-app-gke.local"  # This is a DNS name you'll create for GKE
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: DNS
  address:
    - "34.118.233.241"  # External IP of the GKE service
