virtual-service.yaml
apiVersion: networking.k8s.io/v1
kind: VirtualService
metadata:
  name: simple-app-virtual-service
spec:
  hosts:
    - "simple-app.local"  # The host for your service in EKS
  http:
    - route:
        - destination:
            host: simple-app-gke.local  # This DNS should resolve to GKE
            port:
              number: 80
        weight: 100
apiVersion: networking.k8s.io/v1
kind: DestinationRule
metadata:
  name: simple-app-destination-rule
spec:
  host: simple-app-gke.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL  # Enable mTLS
